Fix dynamic creation of enum and flag gi types for Python 3.3

Importing Gtk was crashing on instantiation of dynamic Enum and Flag
subclasses due to what looks to be an unsupported technique.  Change
tp_new() method for classes dynamically derived from PyGEnum_Type and
PyGFlags_Type to call PyLong_Type.tp_new() instead of attempting to call
__new__() as a python method. This technique seems to work with all
versions of python so the previous python version checking also became
unnecessary.

https://bugzilla.gnome.org/show_bug.cgi?id=682323